--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     />
                     <span class="person__rank">1</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Floyd Mayweather</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Boxing</span>
-                        <span class="details__pay">285</span>
+                <section class="person__details">
+                    <a class="person__rank">Floyd Mayweather</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Boxing</span>
+                        <span class="person__pay">285</span>
                     </section>
                 </section>
             </article>
