--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Highest-Paid Athletes</title>
         <meta charset="utf-8" />
         <meta
-            details__rank="viewport"
+            person__extra="viewport"
             content="width=device-width, initial-scale=1"
         />
         <link rel="stylesheet" href="main.scss" />
@@ -20,7 +20,7 @@
                     <span class="person__rank">1</span>
                 </section>
                 <section class="person__details">
-                    <a class="person__rank">Floyd Mayweather</a>
+                    <a class="person__name">Lionel Messi</a>
                     <section class="person__extra">
                         <span class="person__sport">Boxing</span>
                         <span class="person__pay">285</span>
@@ -36,11 +36,11 @@
                     />
                     <span class="person__rank">2</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Lionel Messi</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Soccer</span>
-                        <span class="details__pay">111</span>
+                <section class="person__details">
+                    <a class="person__name">Lionel Messi</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Soccer</span>
+                        <span class="person__pay">111</span>
                     </section>
                 </section>
             </article>
@@ -53,11 +53,11 @@
                     />
                     <span class="person__rank">3</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Cristiano Ronaldo</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Soccer</span>
-                        <span class="details__pay">108</span>
+                <section class="person__details">
+                    <a class="person__name"">Cristiano Ronaldo</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Soccer</span>
+                        <span class="person__pay">108</span>
                     </section>
                 </section>
             </article>
@@ -70,11 +70,11 @@
                     />
                     <span class="person__rank">4</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Conor McGregor</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Mixed Martial Arts</span>
-                        <span class="details__pay">99</span>
+                <section class="person__details">
+                    <a class="person__name">Conor McGregor</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Mixed Martial Arts</span>
+                        <span class="person__pay">99</span>
                     </section>
                 </section>
             </article>
@@ -87,11 +87,11 @@
                     />
                     <span class="person__rank">5</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Neymar</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Soccer</span>
-                        <span class="details__pay">90</span>
+                <section class="person__details">
+                    <a class="person__name">Neymar</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Soccer</span>
+                        <span class="person__pay">90</span>
                     </section>
                 </section>
             </article>
@@ -104,11 +104,11 @@
                     />
                     <span class="person__rank">6</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">LeBron James</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Basketball</span>
-                        <span class="details__pay">85.5</span>
+                <section class="person__details">
+                    <a class="person__name">LeBron James</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Basketball</span>
+                        <span class="person__pay">85.5</span>
                     </section>
                 </section>
             </article>
@@ -121,11 +121,11 @@
                     />
                     <span class="person__rank">7</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Roger Federer</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Tennis</span>
-                        <span class="details__pay">77.2</span>
+                <section class="person__details">
+                    <a class="person__name">Roger Federer</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Tennis</span>
+                        <span class="person__pay">77.2</span>
                     </section>
                 </section>
             </article>
@@ -138,11 +138,11 @@
                     />
                     <span class="person__rank">8</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Stephen Curry</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Basketball</span>
-                        <span class="details__pay">76.9</span>
+                <section class="person__details">
+                    <a class="person__name">Stephen Curry</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Basketball</span>
+                        <span class="person__pay">76.9</span>
                     </section>
                 </section>
             </article>
@@ -155,11 +155,11 @@
                     />
                     <span class="person__rank">9</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Matt Ryan</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Football</span>
-                        <span class="details__pay">67.3</span>
+                <section class="person__details">
+                    <a class="person__name">Matt Ryan</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Football</span>
+                        <span class="person__pay">67.3</span>
                     </section>
                 </section>
             </article>
@@ -172,11 +172,11 @@
                     />
                     <span class="person__rank">10</span>
                 </section>
-                <section class="details">
-                    <a class="details__rank">Matthew Stafford</a>
-                    <section class="details__extra">
-                        <span class="details__sport">Football</span>
-                        <span class="details__pay">59.5</span>
+                <section class="person__details">
+                    <a class="person__name">Matthew Stafford</a>
+                    <section class="person__extra">
+                        <span class="person__sport">Football</span>
+                        <span class="person__pay">59.5</span>
                     </section>
                 </section>
             </article>
