--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Highest-Paid Athletes</title>
         <meta charset="utf-8" />
         <meta
-            person__extra="viewport"
+            name="viewport"
             content="width=device-width, initial-scale=1"
         />
         <link rel="stylesheet" href="main.scss" />
